# segway_v3

./: README.md
src/segway_v3/segway_description/: CMakeLists.txt  package.xml
src/segway_v3/segway_description/meshes/: x2_wheel.dae
src/segway_v3/segway_description/urdf/: accessories.urdf.xacro
src/segway_v3/segway_description/urdf/sensors/: hokuyo_ust20lx.urdf.xacro  sick_lms1xx.urdf.xacro
src/segway_v3/segway_msgs/: CMakeLists.txt  package.xml
src/segway_v3/segway_navigation/segway_assisted_teleop/: CMakeLists.txt  package.xml
src/segway_v3/segway_navigation/segway_navigation_apps/: CMakeLists.txt  package.xml
src/segway_v3/segway_navigation/segway_navigation_apps/config/RMP_OMNI/: costmap_common_params.yaml
src/segway_v3/segway_navigation/segway_navigation_apps/config/costmaps/2d/: costmap_exploration_map.yaml  costmap_exploration_sensor.yaml  costmap_local.yaml
src/segway_v3/segway_navigation/segway_navigation_apps/launch/: assisted_teleop_demo.launch  move_base.launch
src/segway_v3/segway_ros/: CMakeLists.txt
src/segway_v3/segway_ros/src/segway/: io_eth.py  move_base.py  segway_comm.py  segway_control_marker.py  segway_data_classes.py  segway_teleop.py  segway_teleop.py~  system_defines.py
src/segway_v3/segway_v3/: package.xml
src/segway_v3/segway_v3_config/: CMakeLists.txt  segway_config.sh
src/segway_v3/segway_v3_config/env-hooks/: 50.segway_config.sh
src/segway_v3/si_utils/: CMakeLists.txt  package.xml
src/segway_v3_desktop/: README.md
src/segway_v3_desktop/segway_remote_teleop/launch/: segway_remote_teleop.launch
src/segway_v3_network/: .gitignore  CMakeLists.txt  README.md  package.xml
src/segway_v3_network/env-hooks/: 50.segway_network_config.sh
src/segway_v3_robot/: .gitignore  README.md
src/segway_v3_robot/segway_bringup/: package.xml
src/segway_v3_robot/segway_bringup/launch/localization/config/: common_localization_params.yaml
src/segway_v3_robot/segway_bringup/launch/platform/: segway.launch
src/segway_v3_robot/segway_bringup/launch/sensors/: segway_sensors.launch
src/segway_v3_robot/segway_sensor_filters/but_velodyne/but_velodyne_proc/: CMakeLists.txt
src/segway_v3_robot/segway_sensor_filters/segway_sensor_filters/: package.xml
src/segway_v3_robot/segway_upstart/templates/: job-start.em
src/segway_v3_robot/third_party_sensors/velodyne/velodyne_pointcloud/src/lib/: rawdata.cc
