<package>
	<name>segway_navigation_apps</name>
	<version>0.0.1</version>
	<description>Autonomous mapping and navigation demos for Segway RMP V3 platforms</description>

    <maintainer email="RMP@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/segway_rmp_v3</url>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roslaunch</build_depend>
	
    <run_depend>frontier_exploration</run_depend>
    <run_depend>amcl</run_depend>
    <run_depend>gmapping</run_depend>
    <run_depend>map_server</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>navfn</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>dwa_local_planner</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>segway_ros</run_depend>	
    <run_depend>segway_assisted_teleop</run_depend>
    <run_depend>map_server</run_depend>
    
	<export>
	</export>
</package>
